add these files to repo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 <body>
     
 
+    <div class="container">
+        <h1>Quiz Game</h1>
+        <div id="question-area">
+            <p id="question-text">Question will appear here.</p>
+        </div>
+        <div id="answers-area">
+            <button class="answer-button" data-index="0">Option 1</button>
+            <button class="answer-button" data-index="1">Option 2</button>
+            <button class="answer-button" data-index="2">Option 3</button>
+            <button class="answer-button" data-index="3">Option 4</button>
+        </div>
+        <p id="score">Score: 0</p>
+        <button id="next-question">Next Question</button>
+        <button id="play-again" style="display: none;">Play Again</button>
+    </div>
+
 <script src="task.js"></script>
 </body>
 </html>
